# LiteBot-NEO

./: .env.example  .gitignore  README.md  bot.py  data.db  init.bat  init.sh  pyproject.toml  run-test.py
.github/workflows/: CI.yml  PR.yml
litebot/: utils.py
litebot_utils/: black.py  captcha.py  captcha_manager.py  config.py  model_utils.py  models.py  rule.py  utils.py  web_utils.py
litebot_utils/blacklist/: black.py  models.py
migrations/versions/: 0bedb3ec6757_创建subadmin表.py  1d38d0d98b57_添加bw.py  33892c04d7ce_subadmin.py  db8dc5bd6c94_bad_words.py  ecfd8a463513_fix_list_and_types.py  f290a4c57bc3_remove_unused.py  f65219e033c6_subadmin.py
src/plugins/LiteBot/: __init__.py  database.py  status.py
src/plugins/config/: __init__.py  config.py
src/plugins/datafunc/: __init__.py  base64.py  md5.py  qr.py  sha1.py  sha256.py
src/plugins/group/: __init__.py  bad_words.py  join_manager.py  join_msg.py  kick.py  mute.py  notice.py  recall.py  subadmin.py  switch.py  utils.py  welcome_switch.py
src/plugins/manager/: __init__.py  add.py  auto_clean.py  ban.py  black.py  leave.py  list_black.py  pardon.py  rate.py  rule.py
src/plugins/menu/: __init__.py  commands.py  manager.py  models.py  utils.py
src/plugins/nonebot_plugin_mclib/: player.py  server.py
src/plugins/page/: __init__.py  page.py
src/plugins/web/: __init__.py  nslookup.py  port.py  scan.py  send_ping.py  utils.py  whois.py  wping.py
